Edited wiki page through web user interface.

--- a/wiki/PhpMockRecorderWikiHome.wiki
+++ b/wiki/PhpMockRecorderWikiHome.wiki
@@ -3,9 +3,8 @@
 
 = Introduction =
 
-Please feel free to contribute.
-
+PHP is only a sideline interest for me, so I don't have a lot of time to spend on this project. I have created a working proof-of-concept and I hope the idea will catch on and attract volunteers to improve it. Please feel free to contribute.
 
 = Details =
 
-PHP is only a sideline interest for me, so I don't have a lot of time to spend on this project. I have created a working proof-of-concept and I hope the idea will catch on and attract volunteers to improve it. Please feel free to contribute.
+In the download package, see php-mock.example for sample usage.
