--- a/wiki/PhpMockRecorderWikiHome.wiki
+++ b/wiki/PhpMockRecorderWikiHome.wiki
@@ -13,6 +13,10 @@ The generated mock classes have no dependency on the original classes.
 
 By repeating the recording process for different use-cases and different target objects, the programmer can slice and dice any existing code into distinct sets of "to be tested" and "to be mocked" classes.
 
+= How does it work? =
+
+php-mock-recorder uses PHP's dynamic features such as the eval() function, to create a wrapper class that captures all method calls and return values to and from a specified target object. Then it takes the captured information and generates PHP code that is able to simulate the target object for future unit or regression testing purposes.
+
 = Where is the source code? =
 
 It's in the zip archive at http://code.google.com/p/php-mock-recorder/downloads/list
